# livelog

./: .gitignore  .travis.yml  README.md  build.sh  circle.yml  client_session_key.aes  haskell-livelog.cabal  livelog.cabal  llg  stack.yaml
app/: Main.hs
code/: build.sh
code/api/: .gitignore  build.sh  client_session_key.aes  config.json  livelog.cabal
code/api/app/: Main.hs
code/api/src/: App.hs  Lib.hs  Model.hs  Types.hs
code/api/src/Controllers/: Common.hs  Error.hs  LogTag.hs  Logs.hs  Sessions.hs  Tags.hs  Users.hs
code/api/test/: Spec.hs  UserJourney.hs  Util.hs
code/api/test/Controllers/: LogTag.hs  Logs.hs  Sessions.hs  Tags.hs  Users.hs
code/client/: .jshintrc  build.sh  package.json  webpack.config.js
code/client/app/: dom.js  domain.js  http.js  index.html  index.js  util.js
code/client/app/DOM/: common.js  index.js  login.js  logs.js  modals.js  navbar.js  tags.js  toasts.js
infra/: ci.sh  deploy.sh  dev.sh
infra/client-dev/: Dockerfile
infra/env-build/: docker-compose.yml  env
infra/env-deploy/: docker-compose.yml  env
infra/env-deploy/db/: README.md
infra/env-dev/: docker-compose.yml  env
infra/haskell-deploy/: .gitignore  Dockerfile
infra/haskell-dev/: Dockerfile
src/: App.hs  Command.hs  Lib.hs  Main.hs  Main2.hs  Model.hs  Types.hs
src/Controllers/: Common.hs  Error.hs  LogTag.hs  Logs.hs  Sessions.hs  Tags.hs  Users.hs
test/: Spec.hs  Util.hs
test/Controllers/: LogTag.hs  Logs.hs  Sessions.hs  Tags.hs  Users.hs
