name:                livelog
version:             0.1.0.0
synopsis:            Restful API service for activity logging
description:         Please see README.md
homepage:            http://github.com/eckyputrady/livelog
license:             GPL-3
license-file:        LICENSE
author:              Ecky Putrady
maintainer:          eckyputrady@gmail.com
-- copyright:           
category:            Web
build-type:          Simple
-- extra-source-files:  
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
  other-modules:       App
                      ,Model
                      ,Types
                      ,Controllers.Error
                      ,Controllers.Common
                      ,Controllers.Users
                      ,Controllers.Sessions
                      ,Controllers.LogTag
                      ,Controllers.Logs
                      ,Controllers.Tags
  build-depends:       base >= 4.7 && < 5
                      ,transformers
                      ,mtl
                      ,time
                      ,bytestring
                      ,text
                      ,persistent
                      ,persistent-template
                      ,persistent-mysql
                      ,esqueleto
                      ,monad-logger
                      ,monad-control
                      ,scotty
                      ,http-types
                      ,data-default-class
                      ,wai-session
                      ,wai-session-clientsession
                      ,vault
                      ,clientsession
                      ,wai
                      ,cereal
                      ,aeson
  default-language:    Haskell2010

executable livelog-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , livelog
  default-language:    Haskell2010

test-suite livelog-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , livelog
                     , hspec
                     , hspec-wai
                     , hspec-wai-json
                     , http-types
                     , wai-extra
                     , directory
                     , text
                     , bytestring
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/eckyputrady/livelog
